fix alignment and add classes

--- a/docroot/themes/custom/mass_theme/overrides/css/view-data-listing.css
+++ b/docroot/themes/custom/mass_theme/overrides/css/view-data-listing.css
@@ -103,3 +103,7 @@
 .ma__button.form-submit.ma__button-reset {
   float: right;
 }
+
+#edit-title {
+  width: 100%;
+}
